# lipidetective

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/config_templates/: config_transformer.yaml
config/validation_splits/: train_val_split_1000_spectra_count.yaml  train_val_split_100_spectra_count.yaml  train_val_split_10_spectra_count.yaml  train_val_split_500_spectra_count.yaml  train_val_split_CAR.yaml  train_val_split_CE.yaml  train_val_split_CL.yaml  train_val_split_Cer.yaml  train_val_split_DG.yaml  train_val_split_DGDG.yaml  train_val_split_FA.yaml  train_val_split_GalCer.yaml  train_val_split_HexCer.yaml  train_val_split_IPC.yaml  train_val_split_LPC.yaml  train_val_split_LPE.yaml  train_val_split_LPG.yaml  train_val_split_LPI.yaml  train_val_split_LPS.yaml  train_val_split_LacCer.yaml  train_val_split_MG.yaml  train_val_split_MGDG.yaml  train_val_split_PA.yaml  train_val_split_PC.yaml  train_val_split_PE.yaml  train_val_split_PG.yaml  train_val_split_PI.yaml  train_val_split_PS.yaml  train_val_split_SHexCer.yaml  train_val_split_SM.yaml  train_val_split_SPB.yaml  train_val_split_SQDG.yaml  train_val_split_TG.yaml  train_val_split_phospholipids.yaml  train_val_split_seed_24.yaml  train_val_split_seed_31.yaml  train_val_split_seed_42.yaml
models/: lipidetective_model.pth
src/lipidetective/: lipidetective.py
src/lipidetective/helpers/: hdf5_spectra_viewer.py  lipid_library.py  logging.py  mzml_to_hdf5.py  utils.py  visualizations.py
src/lipidetective/lipid_info/: headgroups.yaml  lipid_components_tokens.yaml  sidechains.yaml  (+2 more)
(+8 files in other folders)
